--- a/src/app/static/css/style.css
+++ b/src/app/static/css/style.css
@@ -92,36 +92,52 @@ h1 {
     border-radius: 10px;
 }
 
+
+
+.searchindex {
+    margin-top: 150px;
+}
+
 #search_bar {
-    margin: 40px;
+    width: 550px;
+    margin: 20px auto;
     padding: 15px;
-    display: block;
-    text-align: center;
+    overflow: auto;
     background-color: white;
-    border-width: 1px;
-  border-style: solid;
-  border-color: black;
-  border-radius: 10px;
-  font-family: Futura, sans serif;
-  font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid black;
+    border-radius: 10px;
+    font-family: Futura, sans serif;
+    font-size: 14px;
 }
 
 .string_field, .dropdown_list {
-  font-family: courier, sans serif;
-  font-size: 12px;
-  border: 1px solid black;
-  border-radius: 5px;
-  padding: 5px;
-  background-color: white;
+    padding: 5px;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    font-family: courier, sans serif;
+    font-size: 12px;
 }
 
 .string_field {
-width: 150px;
+    width: 245px;
 }
 
 .dropdown_list {
-height: 26px;
-position: relative; top: -1px;
+    height: 26px;
+    position: relative;
+    top: -1px;
+    margin: 1px;
+}
+
+.search_submit {
+    width: 59px;
+    height: 58px;
+    float: left;
+    padding-top: 10px;
 }
 
 .submit_button {
@@ -137,10 +153,23 @@ position: relative; top: -1px;
     color: black;
     background-color: white;
     cursor: pointer !important;
-    margin-left: 8px;
 }
 
 .submit_button:hover {
     color: white;
     background-color: black;
+}
+
+.search_label {
+    float:left;
+    text-align: center;
+    width: 59px;
+    height: 58px;
+    line-height: 58px;
+}
+
+.search_form {
+    width: 390px;
+    text-align: center;
+    float:left;
 }
