--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -18,7 +18,7 @@
 
 <header>
     <ul>
-        <li><strong>&#127902; MovieDB</strong></li>
+        <li><strong>> MovieDB</strong></li>
         <li><a href="{{ url_for('index') }}" class="header_link">Home</a></li>
     </ul>
 </header>
