--- a/src/app/templates/details.html
+++ b/src/app/templates/details.html
@@ -110,7 +110,7 @@
                                 {% for dir in list_results.loc[0, "director"] %}
                                     <a href="{{ url_for('search', chosen_type='director',
                                     string_search=dir,
-                                    chosen_column='index') }}" class="details_redirect">{{ dir }} ></a>
+                                    chosen_column='index') }}" class="details_redirect">{{ dir }} <strong>></strong></a>
                                 {% endfor %}
                             </div>
                         {% endif %}
@@ -133,7 +133,7 @@
                                 {% for sta in list_results.loc[0, "stars"] %}
                                     <a href="{{ url_for('search', chosen_type='stars',
                                     string_search=sta,
-                                    chosen_column='index') }}" class="details_redirect">{{ sta }} ></a>
+                                    chosen_column='index') }}" class="details_redirect">{{ sta }} <strong>></strong></a>
                                 {% endfor %}
                             </div>
                         {% endif %}
@@ -144,7 +144,7 @@
                                 {% for gen in list_results.loc[0, "genres"] %}
                                     <a href="{{ url_for('search', chosen_type='genres',
                                     string_search=gen,
-                                    chosen_column='index') }}" class="details_redirect">{{ gen }} ></a>
+                                    chosen_column='index') }}" class="details_redirect">{{ gen }} <strong>></strong></a>
                                 {% endfor %}
                             </div>
                         {% endif %}
