--- a/src/app/templates/recommendations.html
+++ b/src/app/templates/recommendations.html
@@ -31,7 +31,13 @@
                 {% endif %}
             </div>
             {% if not list_initial_movie.loc[0, "director"] == [] %}
-                <div class="recommended_headperson"><strong>Directed by:</strong> {{ ", ".join(list_initial_movie.loc[0, "director"]) }}</div>
+                <div class="recommended_headperson"><strong>Directed by:</strong>
+                    {% for dir in list_initial_movie.loc[0, "director"] %}
+                        <a href="{{ url_for('search', chosen_type='director',
+                        string_search=dir,
+                        chosen_column='index') }}" class="details_redirect">{{ dir }} <strong>></strong></a>
+                    {% endfor %}
+                </div>
             {% elif not list_initial_movie.loc[0, "creator"] == [] %}
                 <div class="recommended_headperson"><strong>Created by:</strong> {{ ", ".join(list_initial_movie.loc[0, "creator"]) }}</div>
             {% endif %}
